update docs & script